@@ -13,58 +13,59 @@ if (!isGeneric("areaPolygon")) {
 }	
 
 setMethod('areaPolygon', signature(x='data.frame'), 
-	function(x, r=6378137, ...) {
-		areaPolygon(as.matrix(x), r=r, ...)
+	function(x, a=6378137, f=1/298.257223563, ...) {
+		areaPolygon(as.matrix(x), a=a, f=f, ...)
 } )
 
 
 setMethod('areaPolygon', signature(x='SpatialPolygons'), 
-function(x, r=6378137, ...) {
+function(x, a=6378137, f=1/298.257223563, ...) {
 
 	test <- !is.projected(x)
 	if (! isTRUE (test) ) {
 		if (is.na(test)) {
 			warning('Coordinate reference system of SpatialPolygons object is not set. Assuming it is degrees (longitude/latitude)!')  			
 		} else {
-			stop('Points are projected. They should be in degrees (longitude/latitude)')  
+			stop('The coordinate reference system is not in longitude/latitude. Use rgeos::gArea instead')  
 		}
 		# or rather transform them ....?
 	}
 
 
-	x = x@polygons
-	n = length(x)
-	res = vector(length=n)
+	x <- x@polygons
+	n <- length(x)
+	res <- vector(length=n)
 	for (i in 1:n) {
-		parts = length(x[[i]]@Polygons )
-		sumarea = 0
+		parts <- length(x[[i]]@Polygons )
+		sumarea <- 0
 		for (j in 1:parts) {
-			crd = x[[i]]@Polygons[[j]]@coords
-			ar = areaPolygon(crd, r=r, ...)
+			crd <- x[[i]]@Polygons[[j]]@coords
+			ar <- areaPolygon(crd, a=a, f=f, ...)
 			if (x[[i]]@Polygons[[j]]@hole) {
-				sumarea = sumarea - ar
+				sumarea <- sumarea - ar
 			} else {
-				sumarea = sumarea + ar
+				sumarea <- sumarea + ar
 			}
 		}
-		res[i] = sumarea
+		res[i] <- sumarea
 	}
 	return(res)
 } )
 
 
 setMethod('areaPolygon', signature(x='matrix'), 
-function(x, perimeter=FALSE, ...) {
-	r <- .Call("polygonarea", as.double(x[,1]), as.double(x[,2]), PACKAGE='geosphere')
-	if (perimeter) {
-		r[2]
-	} else {
-		abs(r[3])
-	}
+function(x, a=6378137, f=1/298.257223563, ...) {
+	r <- .Call("polygonarea", as.double(x[,1]), as.double(x[,2]), as.double(a), as.double(f), PACKAGE='geosphere')
+	abs(r[3])
 })
 	
 
+	
+	
 .oldAreaPolygon <- function(x, r=6378137, ...) {
+
+# Based on code by Jason_Steven (http://forum.worldwindcentral.com/showthread.php?p=69704)
+# Reference: Bevis, M. and G. Cambareri, 1987. Computing the area of a spherical polygon of arbitrary shape. Mathematical Geology 19: 335-346
 
 	haversine <- function(y) { (1-cos(y))/2 }
 
